--- a/teamservices-api/src/main/resources/application.properties
+++ b/teamservices-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/teamservicedb
+spring.datasource.url = jdbc:mysql://localhost:3306/sys
 spring.datasource.username = root
 spring.datasource.password = Pari@0825
 spring.jpa.show-sql = true
