--- a/teamservices-api/src/main/resources/application.properties
+++ b/teamservices-api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+server.port = 8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/sys
 spring.datasource.username = root
-spring.datasource.password = Pari@0825
+spring.datasource.password = admin
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
