Added kubernetes in jenkins image

--- a/Dockerfile-DinD-K8t
+++ b/Dockerfile-DinD-K8t
@@ -16,5 +16,10 @@ RUN apt-get update && \
     apt-get install -y docker-ce-cli && \
     rm -rf /var/lib/apt/lists/*
 
+# Install kubectl
+RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
+    chmod +x kubectl && \
+    mv kubectl /usr/local/bin/kubectl    
+
 # Switch back to Jenkins user
 USER jenkins
