--- a/Dockerfile-DinD-K8t
+++ b/Dockerfile-DinD-K8t
@@ -21,5 +21,7 @@ RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/s
     chmod +x kubectl && \
     mv kubectl /usr/local/bin/kubectl    
 
+RUN mkdir -p /home/jenkins/.kube && chown -R jenkins:jenkins /home/jenkins/.kube
+
 # Switch back to Jenkins user
 USER jenkins
