--- a/team-services-ui/deploy/deployment.yaml
+++ b/team-services-ui/deploy/deployment.yaml
@@ -27,10 +27,11 @@ metadata:
 spec:
   selector:
     app: team-service-ui
+  type: LoadBalancer  
   ports:
     - protocol: TCP
       port: 80       # Port exposed by the service
       targetPort: 80   # Port on the container
       nodePort: 30010  # Or any available port between 30000 and 32767
-  type: NodePort
+
 
